--- a/index.html
+++ b/index.html
@@ -237,6 +237,6 @@
     </footer>
 
     <script src="script.js"></script>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
